@@ -1,0 +1,12 @@
+table, th, td {
+    border: 1px solid white;
+    border-collapse: collapse;
+  }
+
+  .table {
+      width: 100%;
+  }
+
+th, td {
+    height: 50px;
+}
