@@ -11,7 +11,8 @@ import {
   Legend,
   ResponsiveContainer
 } from "recharts";
-import data from "./data";
+import data2020 from "./data2020";
+import data2021 from "./data2021";
 
 class Events extends React.Component {
   render() {
@@ -27,6 +28,60 @@ class Events extends React.Component {
           </p>
         </div>
         <hr style={{ borderColor: "#292929" }} />
+
+  {/* 2021 */}
+        <Articletopper title="2021 Events " anchorName="2020Events" />
+        <div className="eventarticle">
+          <h1>2021 Local Events!</h1>
+          <p>
+          So we are hoping to get in more than 3 events in 2021, but who knows! I'm setting up an empty table in hope that it gets used more.
+          </p>
+          <div className="points">
+            <ol>
+              <li>-----------------COMING SOON-----------------</li>
+              <li>-----------------COMING SOON-----------------</li>
+              <li>-----------------COMING SOON-----------------</li>
+              <li>-----------------COMING SOON-----------------</li>
+              <li>-----------------COMING SOON-----------------</li>
+              <li>-----------------COMING SOON-----------------</li>
+              <li>-----------------COMING SOON-----------------</li>
+            </ol>
+          </div>
+          <div className="barchart">
+            <ResponsiveContainer width="100%" height="100%">
+              <BarChart
+                width={600}
+                height={300}
+                data={data2021}
+                margin={{
+                  top: 20,
+                  right: 30,
+                  left: 20,
+                  bottom: 5
+                }}
+              >
+                <CartesianGrid strokeDasharray="3 3" />
+                <YAxis />
+                <XAxis dataKey="name" />
+                <Tooltip active={false} />
+                <Legend />
+                <Bar dataKey="1" stackId="a" fill="#53bafe" />
+                <Bar dataKey="2" stackId="a" fill="#eb6a9b" />
+                <Bar dataKey="3" stackId="a" fill="#ffd500" />
+                <Bar dataKey="4" stackId="a" fill="#1dd63f" />
+                <Bar dataKey="5" stackId="a" fill="#f9843f" />
+                <Bar dataKey="6" stackId="a" fill="#c21c47" />
+                <Bar dataKey="7" stackId="a" fill="#910cfa" />
+                <Bar dataKey="8" stackId="a" fill="#1e0ca2" />
+                <Bar dataKey="9" stackId="a" fill="#1ef5eb" />
+                <Bar dataKey="10" stackId="a" fill="#fac1eb" />
+              </BarChart>
+            </ResponsiveContainer>
+          </div>
+        </div>
+
+ {/* 2021 END */}
+
         <Articletopper title="2020 Events " anchorName="2020Events" />
         <div className="eventarticle">
           <h1>2020 Local Events!</h1>
@@ -39,13 +94,6 @@ class Events extends React.Component {
               <li>11th Febuary 2020 - Series 9 Pre-Release</li>
               <li>18th Febuary 2020 - Series 8 Tournament</li>
               <li>17th March - Store Championships</li>
-              <li>COMING SOON</li>
-              <li>COMING SOON</li>
-              <li>COMING SOON</li>
-              <li>COMING SOON</li>
-              <li>COMING SOON</li>
-              <li>COMING SOON</li>
-              <li>COMING SOON</li>
             </ol>
           </div>
           <div className="barchart">
@@ -53,7 +101,7 @@ class Events extends React.Component {
               <BarChart
                 width={600}
                 height={300}
-                data={data}
+                data={data2020}
                 margin={{
                   top: 20,
                   right: 30,
